import {
  Column,
  Entity,
  JoinColumn,
  ManyToOne,
  PrimaryGeneratedColumn,
} from 'typeorm';
import { LabCodeLabSession } from './labcode-lab-session.entity';
import { FastqFilePair } from './fastq-file-pair.entity';
import { User } from './user.entity';

export enum EtlResultStatus {
  PROCESSING = 'processing',
  COMPLETED = 'completed',
  FAILED = 'failed',
  WAIT_FOR_APPROVAL = 'wait_for_approval',
  REJECTED = 'rejected',
  APPROVED = 'approved',
}

@Entity('etl_results')
export class EtlResult {
  @PrimaryGeneratedColumn()
  id: number;

  @Column({ name: 'labcode_lab_session_id' })
  labcodeLabSessionId: number;

  @Column({ name: 'fastq_file_pair_id', nullable: true })
  fastqFilePairId: number;

  @Column({ name: 'html_result', type: 'text', nullable: true })
  htmlResult: string;

  @Column({ name: 'excel_result', type: 'text', nullable: true })
  excelResult: string;

  @Column({
    name: 'start_time',
    type: 'timestamp',
    nullable: true,
  })
  startTime: Date;

  @Column({
    name: 'etl_completed_at',
    type: 'timestamp',
    nullable: true,
  })
  etlCompletedAt: Date;

  @Column({
    name: 'etl_completed_queue_at',
    type: 'varchar',
    nullable: true,
  })
  etlCompletedQueueAt: string | null;

  @Column({
    type: 'enum',
    enum: EtlResultStatus,
    nullable: true,
    default: null,
  })
  status: EtlResultStatus;

  @Column({ name: 'reason_reject', nullable: true })
  reasonReject: string;

  @Column({ name: 'reject_by', nullable: true })
  rejectBy: number;

  @Column({ name: 'reason_approve', nullable: true })
  reasonApprove: string;

  @Column({ name: 'approve_by', nullable: true })
  approveBy: number;

  @ManyToOne(
    () => LabCodeLabSession,
    (labcodeLabSession) => labcodeLabSession.etlResults,
  )
  @JoinColumn({ name: 'labcode_lab_session_id' })
  labcodeLabSession: LabCodeLabSession;

  @ManyToOne(() => FastqFilePair, {
    cascade: true,
    nullable: true,
  })
  @JoinColumn({ name: 'fastq_file_pair_id' })
  fastqPair: FastqFilePair;

  @ManyToOne(() => User, {
    cascade: true,
    nullable: true,
  })
  @JoinColumn({ name: 'reject_by' })
  rejector: User;

  @ManyToOne(() => User, {
    cascade: true,
    nullable: true,
  })
  @JoinColumn({ name: 'approve_by' })
  approver: User;
}
