import {
  Entity,
  PrimaryGeneratedColumn,
  Column,
  ManyToOne,
  JoinColumn,
  OneToMany,
  OneToOne,
  CreateDateColumn,
  UpdateDateColumn,
} from 'typeorm';
import { LabSession } from './lab-session.entity';
import { FastqFilePair } from './fastq-file-pair.entity';
import { EtlResult } from './etl-result.entity';
import { AssignLabSession } from './assign-lab-session.entity';

@Entity('labcode_lab_sessions')
export class LabCodeLabSession {
  @PrimaryGeneratedColumn()
  id: number;

  @Column({ name: 'lab_session_id' })
  labSessionId: number;

  @Column({ name: 'labcode', type: 'varchar' })
  labcode: string;

  @Column({ name: 'package_type', type: 'varchar', nullable: true })
  packageType?: string;

  @Column({ name: 'sample_type', type: 'varchar', nullable: true })
  sampleType?: string;

  @CreateDateColumn({ name: 'created_at' })
  createdAt: Date;

  @UpdateDateColumn({ name: 'updated_at' })
  updatedAt: Date;

  // Relationships
  @ManyToOne(() => LabSession, (labSession) => labSession.labcodes)
  @JoinColumn({ name: 'lab_session_id' })
  labSession: LabSession;

  @OneToMany(
    () => FastqFilePair,
    (fastqFilePair) => fastqFilePair.labcodeLabSession,
    {
      cascade: true,
    },
  )
  fastqFilePairs: FastqFilePair[];

  @OneToMany(() => EtlResult, (etlResult) => etlResult.labcodeLabSession, {
    cascade: true,
  })
  etlResults: EtlResult[];

  // One-to-one relationship with AssignLabSession
  @OneToOne(
    () => AssignLabSession,
    (assignLabSession) => assignLabSession.labcodeLabSession,
    {
      cascade: true,
    },
  )
  assignment: AssignLabSession;
}
